# Optimus-3

./: .gitignore  README.md  gui_server.py  pyproject.toml  requirements.txt
MineStudio/: pyproject.toml
MineStudio/minestudio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MineStudio/minestudio/benchmark/: __init__.py  test.py  test_pipeline.py
MineStudio/minestudio/benchmark/auto_eval/: batch_video_rating.py  individual_video_rating.py  video_comparison.py
MineStudio/minestudio/benchmark/task_configs/: upload.py
MineStudio/minestudio/benchmark/utility/: read_conf.py  record_call.py  task_call.py
MineStudio/minestudio/data/: __init__.py  datamodule.py  optimus2_datamodule.py  optimus3_datamodule.py
MineStudio/minestudio/data/minecraft/: __init__.py  core.py  dataset.py  demo.py  optimus2_dataset.py  optimus3_dataset.py  part_event.py  part_raw.py  utils.py
MineStudio/minestudio/inference/: __init__.py  example.py  pipeline.py
MineStudio/minestudio/inference/filter/: __init__.py  base_filter.py  info_base_filter.py
MineStudio/minestudio/inference/generator/: __init__.py  (+2 more)
MineStudio/minestudio/models/: __init__.py  base_policy.py
MineStudio/minestudio/offline/: __init__.py  trainer.py  utils.py
MineStudio/minestudio/simulator/: __init__.py  entry.py
MineStudio/minestudio/utils/: __init__.py  register.py  temp.py
scripts/optimus3/eval/: benchmark_eval.sh  benchmark_generate.sh
src/minecraftoptimus/evaluation/: evaluator.py  utils.py
src/minecraftoptimus/model/: __init__.py
src/minecraftoptimus/utils/: __init__.py  mc_slot.py  shape.py
(+269 files in other folders)
