[project]
name = "minecraftoptimus"
version = "0.1.0"
description = "Optimus-x Agent in Minecraft"
authors = [{ name = "Yuquan Xie", email = "xieyuquan20016@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [[tool.uv.index]]
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true

[tool.ruff]
target-version = "py39"
line-length = 119
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "dist",
    "site-packages",
    "models",
    "output",
    "wandb",
    "checkpoints",
    "datas",
]

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "W605", "C408"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["minecraftoptimus"]
known-third-party = ["llamafactory", "MineStudio", "easyr1", "vllm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
